iwiki +fi <bound#6118849>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -206,6 +206,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 [[ja:bound]]
 [[no:bound]]
 [[ru:bound]]
+[[fi:bound]]
 [[ta:bound]]
 [[te:bound]]
 [[tr:bound]]
