/* Translations */ Danish <bleed#6118913>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -29,7 +29,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Armenian: {{t|hy|արյունահոսել|sc=Armn|tr=aryunahosel}}
 * {{trreq|Basque}}
 * Czech: {{t-|cs|krvácet}}
-* {{trreq|Danish}}
+* Danish: {{t-|da|bløde}}
 * Dutch: {{t+|nl|bloeden}}
 * Esperanto: [[sangi]]
 * Finnish: [[vuotaa]] [[veri|verta]]
