/* Derived terms */ limit <bound#6119147>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -73,7 +73,7 @@ very likely to
 {{checktrans-bottom}}
 
 =====Derived terms=====
-{{rel-top4|terms derived from bound (noun: boundary)}}
+{{rel-top4|terms derived from bound (noun: boundary, limit)}}
 * [[boundary]]
 * [[boundless]]
 * [[harmonic bounding]]
