iwiki +[[:oc:blow]] <blow#6129698>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -276,6 +276,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 [[hu:blow]]
 [[nl:blow]]
 [[ja:blow]]
+[[oc:blow]]
 [[pl:blow]]
 [[ru:blow]]
 [[simple:blow]]
