--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -73,7 +73,7 @@ Old English ''[[leþer]]''
 {{trans-top|made of leather}}
 * Bosnian: {{t-|bs|kožni|m}}
 * Dutch: {{t+|nl|leren}}
-* Finnish: [[nahka]]- (1), [[nahkainen]] (1)
+* Finnish: [[nahka]]-, [[nahkainen]]
 * Polish: [[skórzany]] {{m}}, [[skórzana]] {{f}}, [[skórzane]] {{n}}
 * Russian: {{t|ru|кожаный|tr=kóžanyj|sc=Cyrl}}
 {{trans-mid}}
