--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -3,7 +3,7 @@
 {{rank|smile|walk|places|709|simple|fresh|noble|appearance}}
 
 ===Etymology===
-< {{etyl|enm}} {{term|simple|lang=enm}} < {{etyl|fro}} and {{etyl|fr}} {{term|simple|lang=fr}} < {{etyl|la}} {{term|simplex||simple, literally 'onefold', as opposed to duplex, twofold, double}} < {{term|sim-||the same}} + {{term|plicare||to fold}}: see [[same]] and [[ply]]. Cf. [[single]], [[singular]], [[simultaneous]], etc.joey
+< {{etyl|enm}} {{term|simple|lang=enm}} < {{etyl|fro}} and {{etyl|fr}} {{term|simple|lang=fr}} < {{etyl|la}} {{term|simplex||simple, literally 'onefold', as opposed to duplex, twofold, double}} < {{term|sim-||the same}} + {{term|plicare||to fold}}: see [[same]] and [[ply]]. Cf. [[single]], [[singular]], [[simultaneous]], etc.
 
 ===Pronunciation===
 * {{IPA|/ˈsɪmpl/}}
