--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -49,7 +49,7 @@
 * [[Breton]]: [[pemoc’h]] {{m}} [[moc'h]] {{p}}
 * Bulgarian: {{t+|bg|свиня|f|tr=svinja|sc=Cyrl}}
 * CJK Characters: [[豬]], [[猪]]; [[豚]]; [[豕]]
-* Campidanese Sardinian: [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
+* [[Campidanese Sardinian]]: [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
 * [[Catalan]]: [[porc]] {{m}}, [[truja]] {{f}}
 * [[Cebuano]]: [[baboy]]
 * [[Chamorro]]: [[babui]]
@@ -84,8 +84,8 @@
 * Kurdish: {{KUchar|[[به‌راز]]}} {{g|Kurdish}}
 * [[Ladin]]: [[porcel]]
 * Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
-* Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 {{trans-mid}}
+* Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * Lithuanian: [[kiaulė]] {{g|Lithuanian}}
 * [[Lower Sorbian]]: [[swinja]] {{f}}
 * [[Macedonian]]: [[свиња]] (svinja) {{f}}
