--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,8 +1,10 @@
 ==Translingual==
-{{Han stroke|[[Image:月-order.gif]]}}
+{{stroke order|type=animate}}
 
 ===Etymology===
 Pictographic representation, originally of the crescent moon.
+
+{{Han etyl}}
 
 ===Han character===
 {{Han char|rn=74|rad=月|as=00|sn=4|four=7722<sub>0</sub>|canj=月 (B)|ids=⿵[[冂]][[二]]}}
