--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -123,7 +123,7 @@ From {{term|specio|speciō|see|lang=la}} + {{term|-ies|-iēs|lang=la}} suffix si
 # {{figurative|lang=la}} [[vision]], [[dream]], [[apparition]]
 # {{figurative|lang=la}} [[honor]], [[reputation]]
 # {{figurative|lang=la}} a [[kind]], [[quality]], [[#English|species]]
-# {{law|later|lang=la}} a [[special]] [[case]]
+# {{legal|later|lang=la}} a [[special]] [[case]]
 
 ====Inflection====
 {{la-decl-5th|speci}}
