/* Translations */ +ga <bleed#6143609>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -26,7 +26,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * [[bleed white]]
 
 ====Translations====
-{{trans-top|lose blood through an injured blood vessel}}
+{{trans-top|lose blood}}
 * [[American Sign Language]]: {{t|ase|4@Nose-PalmBackFingerAcross Wiggle 4@NearNeck-PalmBackFingerAcross}}
 * Arabic: {{Arab|[[ينزف]]}}
 * Armenian: {{t|hy|արյունահոսել|sc=Armn|tr=aryunahosel}}
@@ -44,7 +44,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Hungarian: {{t+|hu|vérzik}}
 * {{trreq|Icelandic}}
 * Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
-* {{trreq|Irish}}
+* Irish: {{t|ga|cuir fuil}}
 * Italian: {{t-|it|sanguinare}}
 * Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
 {{trans-mid}}
@@ -71,7 +71,20 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * {{trreq|Welsh}}
 {{trans-bottom}}
 
-{{trans-top|remove air bubbles from a pipe}}
+{{trans-top|draw blood}}
+* Irish: {{t|ga|fuiligh}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|take money from}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|spread and stain}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|remove air bubbles}}
 * Czech: {{t-|cs|odvzdušnit}}
 * Finnish: {{t|fi|ilmata}}
 {{trans-mid}}
