iwiki +[[:lo:mundo]] <mundo#6146768>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -66,6 +66,7 @@ From {{etyl|la|es}} '''[[mundus]]''' "[[world]]"
 [[it:mundo]]
 [[ky:mundo]]
 [[ku:mundo]]
+[[lo:mundo]]
 [[hu:mundo]]
 [[ja:mundo]]
 [[no:mundo]]
