--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -210,6 +210,7 @@ From [[Cockney rhyming slang]] ''[[rabbit and pork]]'', to talk.
 [[hy:rabbit]]
 [[io:rabbit]]
 [[it:rabbit]]
+[[lo:rabbit]]
 [[lt:rabbit]]
 [[hu:rabbit]]
 [[nl:rabbit]]
