/* Translingual */ Edited etymology <月#6149214>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,17 +1,17 @@
 ==Translingual==
 {{stroke order|type=animate}}
 
-===Etymology===
-月 is a pictographic representation, originally of the [[crescent]] [[moon]]. The meaning ''[[Monday]]'' is a borrowing. 
-
-{{Han etyl}}
-
 ===Han character===
 {{Han char|rn=74|rad=月|as=00|sn=4|four=7722<sub>0</sub>|canj=月 (B)|ids=⿵[[冂]][[二]]}}
 
 # [[moon]]
 # [[month]]
 # KangXi radical 74 [[Index:Chinese radical/月|月]]
+
+====Etymology====
+月 is a pictographic representation, originally of the [[crescent]] [[moon]]. The meaning ''[[Monday]]'' is a borrowing. 
+
+{{Han etyl}}
 
 ====Usage notes====
 As part of a character the pictograph 月 is also used to stand for [[Index:Chinese radical/肉|肉]].
