/* English */ +See also: near synonyms, maybe hyponyms and hypernyms? <staff#6152898>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -70,6 +70,14 @@
 * Swedish: {{t-|sv|personal}}
 {{trans-bottom}}
 
+====See also====
+* [[truncheon]]
+* [[club]]
+* [[cudgel]]
+* [[stick]]
+* [[baton]]
+* [[bludgeon]]
+
 ===Verb===
 {{en-verb}}
 
