Reverted edits by [[Special:Contributions/212.85.18.7|212.85.18.7]] ([[User_talk:212.85.18.7|Talk]]); changed back to last version by [[User:Prince Kassad|Prince Kassad]] <species#6164933>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -10,7 +10,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * {{audio|en-us-species.ogg|Audio (US)}}
 
 ===Noun===
-{{en-nounum|spices}}
+{{en-noun|species}}
 
 # A group of plants or animals having [[similar]] [[appearance]].
 #: ''This '''species''' of animal is unique to the area.''
