--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -4,9 +4,7 @@
 ===Proper noun===
 {{en-proper noun|sg=[[American]] [[English]]}}
 
-# A [[dialect]] of the [[English]] language that is chiefly spoken in the [[United States]].
-#: Compare [[British English]].
-# An [[orthography]] of the English language that is chiefly used in the United States.  Compare [[Commonwealth English]].
+# The form of the [[English]] language that is chiefly used in the [[United States]].
 
 ====Translations====
 {{trans-top|American English}}
