/* Noun */ fix plural <ethnocentricity#6173433>

--- a/en/e/ethnocentricity.741981.wikitext
+++ b/en/e/ethnocentricity.741981.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|ethnocentricities}}
 
-# Practising or the policies surrounding being [[ethnocentric]]. 
+# Practising or the policies surrounding being [[ethnocentric]].
 
 ===References===
 *"Damian Green conflates - but with the enthnocentricity typical of so many Conservative theories - two distinct ideas: that forced marriages are wrong; and that holding them to be wrong is a peculiarly British virtue." - British virtues, ''The Week'', 25 August 2007, '''628''', 25.
