/* Adverb */ Formatted 2003 cite and moved it under Quotations header; +1954 cite <qua#6173569>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -12,7 +12,12 @@ From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.
 {{en-adv|-}}
 
 # In the [[capacity]] of.
-#* '''2003''': It was '''qua''' poet that Byron resurrected the exploded and discarded immortal Christian soul by bodying it forth through the notion of soul conceived as poetic imagination. — Roy Porter, ''Flesh in the Age of Reason'' (Penguin 2004, p. 458)
+
+====Quotations====
+* '''1954''': [[w:Gilbert Ryle|Gilbert Ryle]], ''Dilemmas: The Tarner Lectures, 1953'', <span style="font-variant:small-caps">dilemma vii: Perception</span>, page 99 (The Syndics of the Cambridge University Press)
+*: As anatomy, physiology and, later, psychology have developed into more or less well-organized sciences, they have necessarily and rightly come to incorporate the study of, among other things, the structures, mechanisms, and functionings of animal and human bodies '''''qua''''' percipient.
+* '''2003''': Roy Porter, ''Flesh in the Age of Reason'', page 458 (Penguin, 2004)
+*: It was '''qua''' poet that Byron resurrected the exploded and discarded immortal Christian soul by bodying it forth through the notion of soul conceived as poetic imagination.
 
 ====Translations====
 {{trans-top|in the capacity of}}
