--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -37,8 +37,8 @@
 
 {{trans-top|address to a military superior}}
 * Dutch: {{t-|nl|meneer|m}}
-* French: {{t-|fr|monsieur|m}},
 {{trans-mid}}
+* French: {{t-|fr|monsieur|m}},
 {{trans-bottom}}
 
 {{trans-top|address to any male, especially if his name or proper address is unknown}}
@@ -49,7 +49,7 @@
 
 {{checktrans-top}}
 * {{ttbc|Catalan}}: [[senyor]] {{m}}
-*  {{t-|fr|seigneur}} {{m}}
+* {{fr}}: {{t-|fr|seigneur}} {{m}}
 * {{ttbc|German}}: [[Herr]] {{m}}
 * {{ttbc|Italian}}: [[signore]] {{m}}
 * {{ttbc|Latin}}: [[dominus]] {{m}}
