--- a/en/k/knee-high to a grasshopper.742286.wikitext
+++ b/en/k/knee-high to a grasshopper.742286.wikitext
@@ -3,10 +3,10 @@
 ===Adjective===
 {{en-adj|pos=[[knee]] [[high]] [[to]] [[a]] [[grasshopper]]|-}}
 
-# {{idiomatic}} [[short]] (not [[tall]]); especially relating to when the subject was a small [[child]]
+# {{idiomatic}} [[short]]; especially relating to when the subject was a small [[child]]
 
 ====Translations====
-{{trans-top|short (not tall)}}
+{{trans-top|short}}
 {{trans-mid}}
 *Russian: [[метр с кепкой]] /meter high when having cap on/, [[метр в прыжке]] /meter high when jumping/
 {{trans-bottom}}
