--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -26,6 +26,7 @@
 {{trans-mid}}
 * French: {{t+|fr|siffler}}
 * Hungarian: {{t+|hu|fütyül}}
+*[[Irish]]: [[lig fead]]
 * Russian: {{t|ru|свистеть|tr=svist'ét’|sc=Cyrl}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’|sc=Cyrl}} {{pf}}
 * Serbian: {{t|sr|zvižduk|m}}
 * Swedish: {{t+|sv|vissla}}
