--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -40,7 +40,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 
 ====Translations====
 {{trans-top|a separate entity or concept}}
-* afrikaans: ding
+* Afrikaans: {{t|af|ding}}
 * Albanian: {{t-|sq|send|m|xs=Albanian}}
 * Arabic: {{Arab|[[شيء]]}} (šæy’) {{m}}
 * Armenian: {{t|hy|իր|sc=Armn|tr=ir}}, {{t|hy|բան|sc=Armn|tr=ban}}
@@ -77,8 +77,8 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * Indonesian: [[benda]], [[barang]], [[makhluk]]
 * [[Interlingua]]: [[cosa]]
 * Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
-{{trans-mid}}
 * Italian: {{t+|it|cosa|f}}
+{{trans-mid}}
 * Japanese: [[事]] ([[こと]], koto)
 * Korean: [[물건]] (mulgeon)
 * Kurdish:
