--- a/en/t/TEMPSC.855983.wikitext
+++ b/en/t/TEMPSC.855983.wikitext
@@ -4,3 +4,4 @@
 '''TEMPSC'''
 
 # Totally Enclosed Motor Propelled Survival Craft.  A form of lifeboat typically installed on large sea going vessels or platforms and vessels associated with the oil and gas industry.
+{{count page|[[Wiktionary:Page count]]}}
