sorted/rebalanced translations, trans link [[Romani]] <polecat#6209178>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -42,7 +42,6 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * Estonian: [[tuhkur]]
 * Finnish: {{t+|fi|hilleri}}
 * French: {{t+|fr|putois|m}}
-* [[West Frisian]]: [[murd]]
 * [[Friulian]]: [[puçul]], [[pufe]], [[pudîs]], [[spuç]]
 * [[Galician]]: [[tourón]]
 * German: {{t+|de|Iltis|m}}
@@ -50,9 +49,9 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * Hungarian: {{t+|hu|görény}}
 * Irish: [[firéad]]
 * Italian: {{t-|it|puzzola|f}}
-{{trans-mid}}
 * Latin: {{t+|la|mustella}}
 * Latvian: [[sesks]]
+{{trans-mid}}
 * Lithuanian: {{t+|lt|šeškas|xs=Lithuanian}}
 * [[Lower Sorbian]]: [[twoŕ]]
 * [[Macedonian]]: [[обичен твор]] ([[običen tvor]])
@@ -60,9 +59,9 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * [[Occitan]]: [[catpudre]]
 * Polish: {{t+|pl|tchórz}}
 * Portuguese: [[toirăo]]
+* [[Romani]]: [[mutsa-kandini]] {{f}}
 * Romanian: [[dihor]]
 * [[Romansch]]: [[telpi]]
-* Romani: [[mutsa-kandini]] {{f}}
 * Russian: {{t+|ru|хорёк|sc=Cyrl}} (hor'ók) {{m}}, [[хорь]] (hor') {{m}}
 * [[Sami]]: [[čáhppesbuoidda]]
 * [[Sardinian]]: [[pùtzola]]
@@ -77,6 +76,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * [[Upper Sorbian]]: [[tchór]]
 * [[Walloon]]: {{t+|wa|vexhåd|xs=Walloon}}
 * Welsh: [[ffwlbart]]
+* [[West Frisian]]: [[murd]]
 {{trans-bottom}}
 
 {{trans-see|skunk}}
