--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -25,6 +25,7 @@ Old English ''[[leþer]]''
 * Armenian: {{t|hy|կաշի|sc=Armn|tr=kaši}}
 * Bosnian: {{t-|bs|koža|f}}
 * [[Catalan]]: [[cuir]] {{m}}
+* [[Chamicuro]]: {{tø|ccc|shama}}
 * Chinese: [[皮革]] (pí gé)
 * Croatian: {{t-|hr|koža|f}}
 * Czech: {{t-|cs|kůže|f}}
