/* Noun */ line weight <weight#6210299>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -24,8 +24,9 @@
 # {{statistics}} A variable which multiplies a value for ease of statistical manipulation.
 # {{topology}} The smallest cardinality of a base.
 # {{typography}} The [[boldness]] of a [[font]]; the relative thickness of its [[stroke]]s.
-# (aesthetics) The [[illusion]] of [[mass]].
-# (aesthetics) The [[thickness]] and [[opacity]] of [[paint]].
+# {{context|visual art}} The relative thickness of a drawn or painted [[rule]], [[line weight]].
+# {{context|visual art}} The [[illusion]] of [[mass]].
+# {{context|visual art}} The [[thickness]] and [[opacity]] of [[paint]].
 
 : ''Compare to'' [[mass]].
 
