--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -40,7 +40,7 @@
 ====Translations====
 {{trans-top|area of land completely surrounded by water}}
 * [[Afrikaans]]: [[eiland]]
-* [[Ainu]]: [[モシリ|モシ<span style="font-size:70%;">リ</span>]] (moshir)
+* [[Ainu]]: [[モシㇼ]] (moshir)
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
 * Arabic: {{Arab|[[جزيرة|جَزِيرَة]]}} (jazeera) {{f}}
 * [[Aragonese]]: [[isla]] {{f}}
@@ -59,6 +59,7 @@
 * Burmese: [[ကယ့န္း]] (kyùn)
 * CJKV Characters: [[島]], [[嶋]], [[岛]]
 * [[Catalan]]: {{t+|ca|illa|f}}
+* [[Chamicuro]]: {{tø|ccc|yishla}}
 * Chinese: [[島]], [[岛]] (dǎo); [[島嶼]], [[岛屿]] (dǎoyǔ)
 *: Min Nan: [[tó-sū]]
 * [[Corsican]]: [[isula]] {{f}}
