/* Translations */ fi <break#6218000>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -337,7 +337,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Armenian: [[կոտրել]] (kotrel)
 * Danish: [[knække]], [[knuse]]
 * Dutch: {{t+|nl|breken}}
-* Finnish: {{t+|fi|kesyttää}}, {{t-|fi|murtaa}}, {{t-|fi|nujertaa}}
+* Finnish: {{t|fi|lannistaa}}, {{t-|fi|murtaa}} {{t|fi|tahto}}, {{t-|fi|nujertaa}}
 * French: {{t+|fr|briser}}
 * German: {{t+|de|brechen}}
 * Hebrew: {{t-|he|לשבור|tr=lishbor|sc=Hebr}}
