/* Usage notes */ <species#6226668>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -21,7 +21,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 # {{chemistry}} A specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]]; used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
 
 ====Usage notes====
-* {{term|specie}} is a separate word, not the singular version of {{term|species}}.
+* {{term|specie}} is a separate word that means coin money, not the singular version of {{term|species}}.
 * {{sense|biology, taxonomy, rank in the classification of organisms}} See {{term|species name}}.
 
 ====Derived terms====
