+trans fi <second coming#6229371>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -6,4 +6,8 @@
 # {{Christianity}} The (awaited) triumphant return of [[Jesus Christ]].
 
 ====Translations====
+{{trans-top|the return of Jesus Christ}}
+* Finnish: {{t|fi|toinen tuleminen}}
+{{trans-mid}}
 * Greek: {{t-|el|Δευτέρα Παρουσία|sc=Grek}}
+{{trans-bottom}}
