--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -9,6 +9,8 @@
 {{en-noun}}
 
 # A [[criminal]] who steals.
+#*'''1973''' (November 17), President [[w:Richard Nixon|Richard Nixon]]
+#* ''People have got to know whether or not their President is a '''crook'''. Well, I'm not a '''crook'''. I've earned everything I've got.<ref>[http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm Nixon Tells Editors, 'I'm Not a Crook'], November 18, 1973 (The Washington Post)</ref>
 # A [[staff]] with a [[hook]] at one end, particularly one used by [[shepherd]]s.
 # A [[bend]].
 #: ''She held the baby in the '''crook''' of her arm.''
@@ -37,6 +39,9 @@
 
 ====Derived terms====
 * [[by hook or by crook]]
+
+====References====
+</references>
 
 ===Verb===
 {{en-verb}}
