--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -27,11 +27,11 @@
 #: ''Men '''at''' work.''
 
 ====Usage notes====
-#: ''He threw the ball to me'' &mdash; (so I could catch it).
-#: ''He threw the ball at me'' &mdash; (trying to hit me with it).
+* ''He threw the ball to me'' &mdash; (so I could catch it).
+* ''He threw the ball at me'' &mdash; (trying to hit me with it).
 
-#: ''He talked to her'' &mdash; (conversationally).
-#: ''He shouted at her'' &mdash; (aggressively).
+* ''He talked to her'' &mdash; (conversationally).
+* ''He shouted at her'' &mdash; (aggressively).
 
 ====Translations====
 {{trans-top|in or very near a particular place}}
