--- a/en/u/unseemliness.742251.wikitext
+++ b/en/u/unseemliness.742251.wikitext
@@ -1,7 +1,12 @@
 ==English==
+
 ===Noun===
 {{en-noun|-}}
+
 # The state of being [[unseemly]].
+
+====Antonyms====
+* [[seemliness]]
 
 [[te:unseemliness]]
 [[vi:unseemliness]]
