/* Adverb */ + example sentence <even so#6249913>

--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -3,6 +3,7 @@
 ===Adverb===
 '''[[even]] [[so]]'''
 
-# [[despite]] the contrary.
+# [[despite|Despite]] the contrary.
+#: ''His ideas are all wrong. '''Even so''', I want to agree with him.''
 
 [[Category:English adverbs]]
