--- a/en/b/bunny hop.855593.wikitext
+++ b/en/b/bunny hop.855593.wikitext
@@ -7,3 +7,4 @@
 
 # {{mainly|US|idiom}} A [[dance]] from the [[big band]] era, a variation of the [[conga]].
 # {{cycling}} A jump made where both wheels leave the ground.
+# {{baseball}} A [[ground ball]] that hops along the [[field]] instead of [[rolling]].
