sorted/rebalanced translations, trans link [[Afrikaans]] <thing#6256047>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -29,6 +29,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 # {{context|U.S. slang}} A [[penis]].
 # A [[living]] being or creature.
 #: ''you poor '''thing'''''
+
 ====Quotations====
 * '''1611''' — [[w:King James Version of the Bible|King James Version of the Bible]], ''[[s:Bible (King James)/Luke|Luke]] 1:1''
 *: Forasmuch as many have taken in hand to set forth in order a declaration of those '''things''' which are most surely believed among us...
@@ -40,7 +41,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 
 ====Translations====
 {{trans-top|a separate entity or concept}}
-* Afrikaans: {{t|af|ding}}
+* [[Afrikaans]]: {{t|af|ding}}
 * Albanian: {{t-|sq|send|m|xs=Albanian}}
 * Arabic: {{Arab|[[شيء]]}} (šæy’) {{m}}
 * Armenian: {{t|hy|իր|sc=Armn|tr=ir}}, {{t|hy|բան|sc=Armn|tr=ban}}
@@ -77,8 +78,8 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * Indonesian: [[benda]], [[barang]], [[makhluk]]
 * [[Interlingua]]: [[cosa]]
 * Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
-* Italian: {{t+|it|cosa|f}}
 {{trans-mid}}
+* Italian: {{t+|it|cosa|f}}
 * Japanese: [[物]] ([[もの]], mono) [[事]] ([[こと]], koto)
 * Korean: [[물건]] (mulgeon)
 * Kurdish:
