--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -23,7 +23,7 @@ See [[bind]]
 
 # {{context|with infinitive}} Obliged to.
 #: ''You are not legally '''bound''' to reply.''
-# {{context|with infinitive}} Very likely to.
+# {{context|with infinitive}} Very [[likely]] to.
 #: ''They were '''bound''' to come into conflict eventually.
 # {{linguistics}} Refers to a type [[morpheme]] that cannot stand alone as a free word
 
