--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -48,7 +48,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Italian: {{t-|it|sanguinare}}
 * Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi o nagasu)
 {{trans-mid}}
-* Khmer: {{Khmr|[[ចេញឈាម]]}} (jeuñ chīəum)
+* [[Khmer]]: {{Khmr|[[ចេញឈាម]]}} (jeuñ chīəum)
 * {{trreq|Korean}}
 * {{trreq|Latin}}
 * {{trreq|Latvian}}
