iwiki +[[:no:rabbit]] <rabbit#6272819>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -216,6 +216,7 @@ From [[Cockney rhyming slang]] ''[[rabbit and pork]]'', to talk.
 [[lt:rabbit]]
 [[hu:rabbit]]
 [[nl:rabbit]]
+[[no:rabbit]]
 [[pl:rabbit]]
 [[pt:rabbit]]
 [[ro:rabbit]]
