iwiki +[[:no:squirrel]] <squirrel#6272853>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -135,6 +135,7 @@ The participles with a double 'l' ('''[[squirrelling]]''' and '''[[squirrelled]]
 [[it:squirrel]]
 [[lt:squirrel]]
 [[hu:squirrel]]
+[[no:squirrel]]
 [[oc:squirrel]]
 [[pl:squirrel]]
 [[ru:squirrel]]
