iwiki +[[:hu:dud]] <dud#6276084>

--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -93,6 +93,7 @@ From {{etyl|tr|sr}} [[dut]] < {{etyl|fa|sr}} {{fa-Arab|[[توت]]}}.
 [[Category:sr:Fruits]]
 
 [[it:dud]]
+[[hu:dud]]
 [[ro:dud]]
 [[ru:dud]]
 [[vi:dud]]
