--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -11,7 +11,7 @@
 * [[North American English]]
 
 ====Translations====
-{{trans-top|American English}}
+{{trans-top|English in the United States}}
 * Chinese:
 *: Cantonese: {{tø|yue|美國英語|tr=mei5 gwok3 jing1 jyu5|sc=Hani|xs=Cantonese}}
 *: Mandarin: [[美國英語]] (traditional); [[美国英语]] (simplified)
