--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -140,7 +140,7 @@
 * [[Sundanese]]: {{t-|su|pulo|xs=Sundanese}}
 * Swahili: [[kisiwa]]
 * Swedish: {{t+|sv|ö|c}}, {{t+|sv|holme|c}}, {{t+|sv|kobbe|c}}, {{t+|sv|skär|n}}
-* [[Tagalog]]: {{t+|tl|pulo|xs=Tagalog}}
+* [[Tagalog]]: {{t+|tl|pulo|xs=Tagalog}} archipelago- kapuluan
 * [[Tamil]]: {{t+|ta|தீவு|xs=Tamil}}
 * [[Telugu]]: [[దీవి]] (dIvi), [[ద్వీపం]] (dveepaM)
 * Thai: {{t+|th|เกาะ|tr=gòr|xs=Thai}}
