--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -38,23 +38,28 @@
 {{trans-top|address to a military superior}}
 * Dutch: {{t-|nl|meneer|m}}
 {{trans-mid}}
-* French: {{t-|fr|monsieur|m}},
+* French: {{t-|fr|monsieur|m}}
 {{trans-bottom}}
 
 {{trans-top|address to any male, especially if his name or proper address is unknown}}
+* Arabic: {{Arab|[[سيد]]}} (sáyyid) {{m}}, {{Arab|[[سيدي]]}} (sayyídi) {{m}} (''my lord''), {{Arab|[[حضرتك]]}} (ḥaḍrátak) {{m}}
+* Chinese: [[先生]] (xiānsheng)
 * Dutch: {{t-|nl|meneer|m}}, {{t-|nl|mijnheer|m}}
+* French: {{t-|fr|monsieur|m}}
+* German: [[Herr]] {{m}}, [[mein Herr]] {{m}} (''my lord'')
+* Japanese: [[だんな]] (danna)
 {{trans-mid}}
 * Kurdish: {{KUchar|[[کاک]]}}
+* Polish: [[pan]] {{m}}, [[panie]] {{m}} ([[vocative case]])
+* Russian: [[сударь]] (súdarʹ) {{m}} (''obsolete'')
 {{trans-bottom}}
 
 {{checktrans-top}}
 * {{ttbc|Catalan}}: [[senyor]] {{m}}
 * {{fr}}: {{t-|fr|seigneur}} {{m}}
-* {{ttbc|German}}: [[Herr]] {{m}}
 * {{ttbc|Italian}}: [[signore]] {{m}}
 * {{ttbc|Latin}}: [[dominus]] {{m}}
 {{trans-mid}}
-* {{ttbc|Polish}}: [[pan]] {{m}}
 * {{ttbc|Portuguese}}: [[senhor]] {{m}}
 * {{ttbc|Romanian}}: [[domn]] {{m}} (1), [[domnule]] ''(vocative form of domn)'' {{m}} (3)
 * {{ttbc|Scottish Gaelic}}: [[An Ridire|an ridire]] {{m}}
