--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -221,6 +221,7 @@ Old English ''[[þonne]]''
 [[sv:then]]
 [[ta:then]]
 [[te:then]]
-[[vi:then]]
+[[th:then]]
 [[tr:then]]
+[[vi:then]]
 [[zh:then]]
