--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -177,7 +177,8 @@
 [[sv:simple]]
 [[ta:simple]]
 [[te:simple]]
-[[vi:simple]]
+[[th:simple]]
 [[tr:simple]]
 [[uk:simple]]
+[[vi:simple]]
 [[zh:simple]]
