iwiki +[[:it:quadrant]] <quadrant#6295509>

--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -66,6 +66,7 @@ From {{etyl|la}} ''[[quadrans]]''.
 [[fr:quadrant]]
 [[io:quadrant]]
 [[id:quadrant]]
+[[it:quadrant]]
 [[ru:quadrant]]
 [[ta:quadrant]]
 [[te:quadrant]]
