--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -21,18 +21,16 @@ Literally "beyond the river Dniester".
 * Bosnian: {{t|bs|Pridnjestrovska Moldavska Republika|f}}
 * Bulgarian: {{t|bg|Приднестровие|f|tr=Pridnestrovie|sc=Cyrl}}
 * [[Catalan]]: {{t-|ca|Transnístria|f}}
-* Chinese: {{zh-ts|德涅斯特河沿岸共和國|德涅斯特河沿岸共和国}}
-*: Cantonese: {{tø|yue|德涅斯特河沿岸共和國|sc=Hani|xs=Cantonese}}
-*: Mandarin: {{t|cmn|德涅斯特河沿岸共和国|sc=Hani|xs=Mandarin}} (dénièsītèhéyánàn gònghéguó)
+* Chinese: {{zh-ts|涅斯特里亞|涅斯特里亚}} (Nièsītèlǐyà)
 * Croatian: {{t|hr|Pridnjestrovska Moldavska Republika|f}}
 * Czech: {{t|cs|Podněstří}}
 * Dutch: {{t|nl|Trans-Nistrië}}
 * Esperanto: {{t|eo|Ĉednestrio|xs=Esperanto}}, {{t|eo|Transdnestrio|xs=Esperanto}}, {{t|eo|Transnistrio|xs=Esperanto}}
 * Estonian: {{t-|et|Transnistria}}
 * Finnish: {{t+|fi|Transnistria}}
-* French: {{t+|fr|Transnistrie|f}}, {{t|fr|République moldave de Transnistrie|f}}
+* French: {{t+|fr|Transnistrie|f}}
 * Georgian: {{t|ka|დნესტრისპირეთი|xs=Georgian}} (dnestrispiret‘i)
-* German: {{t|de|Transnistrien}}
+* German: {{t|de|Transnistrien|n}}
 * Greek: {{t|el|Υπερδνειστερία|f|sc=Grek}}
 * Hebrew: {{t|he|טרנסניסטריה|f|sc=Hebr}}
 {{trans-mid}}
@@ -43,19 +41,19 @@ Literally "beyond the river Dniester".
 * Korean: {{t|ko|트란스니스트리아|sc=Hang}} (teuranseuniseuteuria)
 * Latvian: {{t|lv|Piedņestras Moldāvu Republika|xs=Latvian}}
 * Lithuanian: {{t+|lt|Padniestrė|xs=Lithuanian}}
-* [[Moldavian]]: {{t|mo|Транснистриа|f|Transnistria]]|tr=[[#Romanian|sc=Cyrl|xs=Moldavian}}, {{t|mo|Република Молдовеняскэ Нистрянэ|f|tr=[[Republica Moldovenească Nistreană]]|sc=Cyrl|xs=Moldavian}}
+* [[Moldavian]]: {{t|mo|Транснистриа|f|Transnistria]]|tr=[[#Romanian|sc=Cyrl|xs=Moldavian}}
 * Norwegian: {{t-|no|Transnistria}}
 * [[Occitan]]: {{t-|oc|Transnístria|f|xs=Occitan}}
 * [[Piedmontese]]: {{tø|pms|Transnistria|f|xs=Piemontese}}
 * Polish: {{t+|pl|Naddniestrze}}
 * Portuguese: {{t+|pt|Transnístria|f}}
 * Romanian: {{t-|ro|Transnistria|f}}
-* Russian: {{t|ru|Приднестровье|n|tr=Pridnéstrovje|sc=Cyrl}}
+* Russian: {{t|ru|Приднестровье|n|tr=Pridnestróvje|sc=Cyrl}}
 * Serbian: {{t|sr|Придњестровље|sc=Cyrl}}
 * Slovak: {{t|sk|Podnestersko}}
 * Spanish: {{t-|es|Transnistria}}
 * Swedish: {{t|sv|Transnistrien}}
-* Ukrainian: {{t|uk|Придністровська Молдавська Республіка|f|tr=Prydnistrovs’ka Moldavs’ka Respublika|sc=Cyrl|xs=Ukrainian}}
+* Ukrainian: {{t|uk|Придністров'я|n|tr=Prydnistróvv'ja|sc=Cyrl|xs=Ukrainian}}
 {{trans-bottom}}
 
 [[Category:Place names]]
