+ no trans <American English#6301270>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -23,6 +23,7 @@
 {{trans-mid}}
 * Japanese: {{t-|ja|アメリカ英語|tr=Amerika eigo|sc=Jpan}}, {{t|ja|米英語|tr=beieigo|sc=Jpan}}, {{t-|ja|米語|tr=beigo|sc=Jpan}}
 * Korean: [[미국 영어]] ([[美國英語]])
+* Norwegian: {{t|no|amerikansk-engelsk}}
 * Polish: {{t|pl|amerykański angielski}}
 * Russian: {{t|ru|американский английский|sc=Cyrl}}
 * Swedish: {{t-|sv|amerikansk engelska}}
