--- a/en/e/EEG.26244.wikitext
+++ b/en/e/EEG.26244.wikitext
@@ -13,10 +13,11 @@
 ----
 
 ==Dutch==
-{{wikipedia|Europese Economische Gemeenschap|lang=nl}}
+{{wikipedia|lang=nl}}
 
 ===Abbreviation===
 {{infl|nl|abbreviation}}
+# [[elektro-encefalogram]]
 # [[Europese]] [[economische|Economische]] [[gemeenschap|Gemeenschap]]
 
 [[de:EEG]]
