--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -32,7 +32,7 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 ==Serbo-Croatian==
 
 ===Etymology===
-From {{etyl|tr|hr}} [[dut]] < {{etyl|fa|hr}} {{fa-Arab|[[توت]]}}.
+From {{etyl|tr|hr}} [[dut]] < {{etyl|fa|hr}} {{fa-Arab|[[توت]]}} < {{etyl|arc|sr}} {{term|תותא||sc=Hebr|tr=tuta|lang=arc}}.
 
 ===Noun===
 {{infl|sh|noun|g=m|pl=dudovi|Cyrillic spelling:|{{l|sh|дуд}}}}
