--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -32,7 +32,7 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 ==Serbo-Croatian==
 
 ===Etymology===
-From {{etyl|tr|sh}} [[dut]] < {{etyl|fa|sh}} {{fa-Arab|[[توت]]}} < {{etyl|arc|sh}} {{term|ܬܘܬܐ}}/{{term|תותא||sc=Hebr|tr=tuta|lang=arc}}.
+From {{etyl|tr|sh}} [[dut]] < {{etyl|fa|sh}} {{fa-Arab|[[توت]]}} (tut) < possibly from {{etyl|arc|sh}} {{term|ܬܘܬܐ}}/{{term|תותא||sc=Hebr|tr=tuta|lang=arc}}. Otherwise, Aramaic may be derived from Persian.
 
 ===Noun===
 {{infl|sh|noun|g=m|pl=dudovi|Cyrillic spelling:|{{l|sh|дуд}}}}
