--- a/en/k/Krystin.802827.wikitext
+++ b/en/k/Krystin.802827.wikitext
@@ -3,6 +3,6 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# A modern female [[given name]], a variant of [[Krystina]]
+# {{given name|female|from=Ancient Greek}}, one of the modern spelling variants of [[Kristin]].
 
 [[sr:Krystin]]
