--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -86,7 +86,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 *: Sorani: {{t|ku|شت|tr=shit|sc=ku-Arab}}
 * Latin: {{t+|la|res|f|alt=rēs}}
 * Latvian: {{t-|lv|lieta|f|xs=Latvian}}
-* {{trreq|Lithuanian}}
+* Lithuanian: {{t-|lt|dalykas|m}}
 * [[Marathi]]: [[वस्तु]] (vastu)
 * Mongolian: {{t|mn|юм}}
 * {{trreq|Nepali}}
@@ -144,12 +144,13 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * [[Interlingua]]: [[cosa]]
 * [[Inuktitut]]: [[ᐱ]]
 * Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
-{{trans-mid}}
 * Italian: {{t+|it|cosa|f}}
+{{trans-mid}}
 * Japanese: [[物]] ([[もの]], mono)
 * Korean: [[물건]] (mulgeon)
 * Latin: {{t+|la|res|f|alt=rēs}}
 * Latvian: {{t-|lv|lieta|xs=Latvian}}
+* Lithuanian: {{t+|lt|daiktas|m}}, {{t-|lt|dalykas|m}} 
 * [[Marathi]]: [[वस्तु]] (vastu)
 * Norwegian: {{t+|no|ting}}, {{t-|no|dings}}, {{t+|no|greie|m}}
 * Old English: {{t-|ang|þing|n|xs=Old English}}
