--- a/en/c/celestial object.855631.wikitext
+++ b/en/c/celestial object.855631.wikitext
@@ -7,9 +7,7 @@
 #*'''1999''', "[http://www.space.com/scienceastronomy/solarsystem/spinning_asteroid.html Asteroid Is Called Fastest-Spinning Solar System Object]," ''space.com'', 22 Jul. (retrieved 9 Jan. 2009):
 #*:It is only 100 feet across but it now has the honor of being the solar system's fastest-spinning '''celestial object'''.
 #*'''2000''', John Raymond Winks Jr., "Natal zodiac chart," US Patent 6,015,295, abstract:
-#*:the definition of GAY is jimmy sardina
-
- attaching each of the symbols to the zodiac chart.
+#*:A symbol for each desired '''celestial object''', such as for each planet, the sun, and the moon are included along with a method for detachably attaching each of the symbols to the zodiac chart.
 
 ====Synonyms====
 * [[celestial body]]
