--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -11,12 +11,14 @@
 # A [[criminal]] who steals.
 #* '''1973''' (November 17), President [[w:Richard Nixon|Richard Nixon]]
 #*: ''People have got to know whether or not their President is a '''crook'''. Well, I'm not a '''crook'''. I've earned everything I've got.''<ref>[http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm Nixon Tells Editors, 'I'm Not a Crook'], November 18, 1973 (The Washington Post)</ref>
-# A [[staff]] with a [[hook]] at one end, particularly one used by [[shepherd]]s.
+# A [[shepard's crook]]; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
+#:'''1970 The New English Bible with the Apocrypha, Oxford Study Edition''', pub 1976 by Oxford University Press; ''Psalms'' 23-4, p583:
+#:*Even though I walk through a / valley dark as death / I fear no evil, for thou art with me, / thy staff and thy '''crook''' are my / comfort.
 # A [[bend]].
 #: ''She held the baby in the '''crook''' of her arm.''
 
 ====Synonyms====
-* See also [[Wikisaurus:criminal]]
+* (criminal) See [[Wikisaurus:criminal]]
 
 ====Translations====
 {{trans-top|a criminal who steals}}
