/* Scottish Gaelic */ overhaul <mill#6327029>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -210,11 +210,15 @@ Latin [[milium]]
 ==Scottish Gaelic==
 
 ===Verb===
-'''mill''' (''present participle'' '''a' milleadh''', ''simple past'' '''mhill''', ''past participle'' '''[[millte]]''')
+{{infl|gd|verb|present participle form|milleadh}}
 
-# To [[destroy]], to [[ruin]].
+# to [[destroy]], [[spoil]],  [[ruin]]
 
-[[Category:Scottish Gaelic verbs]]
+===Noun===
+{{infl|gd|noun form|g=m}}
+
+# {{form of|Genitive|meall|lang=gd}}
+# {{form of|Plural|meall|lang=gd}}
 
 ----
 
