--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -43,6 +43,7 @@
 
 {{trans-top|address to any male, especially if his name or proper address is unknown}}
 * Arabic: {{Arab|[[سيد]]}} (sáyyid) {{m}}, {{Arab|[[سيدي]]}} (sayyídi) {{m}} (''my lord''), {{Arab|[[أستاذ]]}} (ʼustāḏ) {{m}}, {{Arab|[[حضرتك]]}} (ḥaḍrátak) {{m}}
+* Armenian: {{t|hy|պարոն|sc=Armn|tr=paron}}
 * Chinese: [[先生]] (xiānsheng)
 * Dutch: {{t-|nl|meneer|m}}, {{t-|nl|mijnheer|m}}
 * French: {{t-|fr|monsieur|m}}
