/* English */ see also EB1911 and wp <whistle#6328322>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -133,6 +133,10 @@
 * {{ttbc|Telugu}}: [[ఈల]] (eela), [[బూర]] (boora)
 {{checktrans-bottom}}
 
+===See also===
+*{{pedialite}}
+{{Wikisource1911Enc Citation|whistle}}
+
 [[Category:1000 English basic words]]
 
 [[ar:whistle]]
