--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -26,7 +26,7 @@
 {{trans-mid}}
 * French: {{t+|fr|siffler}}
 * Hungarian: {{t+|hu|fütyül}}
-*[[Irish]]: [[lig fead]]
+* Irish: [[lig fead]]
 * Russian: {{t|ru|свистеть|tr=svist'ét’|sc=Cyrl}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’|sc=Cyrl}} {{pf}}
 * Serbian: {{t|sr|zvižduk|m}}
 * Swedish: {{t+|sv|vissla}}
@@ -76,9 +76,9 @@
 * Dutch: {{t|nl|fluitje|n}}
 * Finnish: {{t+|fi|pilli}}
 * Hungarian: {{t+|hu|síp}}
-*[[Irish]]: {{t+|ga|feadóg}} {{f}}
-* Italian: {{t-|it|fischietto|m}}
+* Irish: {{t+|ga|feadóg}} {{f}}
 {{trans-mid}}
+* Italian: {{t-|it|fischietto|m}}
 * Japanese: {{t+|ja|笛|tr=[[ふえ]], fue|sc=Jpan}}
 * Polish: {{t|pl|gwizdek|m}}
 * Portuguese: {{t|pt|apito|m}}
@@ -134,7 +134,7 @@
 {{checktrans-bottom}}
 
 ===See also===
-*{{pedialite}}
+* {{pedialite}}
 {{Wikisource1911Enc Citation|whistle}}
 
 [[Category:1000 English basic words]]
