iwiki +[[:fi:dud]] <dud#6330983>

--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -57,5 +57,6 @@ From {{etyl|ota|sh}} {{term|طوت|tr=tut, dut|sc=ota-Arab|lang=ota}} < {{etyl|f
 [[hu:dud]]
 [[ro:dud]]
 [[ru:dud]]
+[[fi:dud]]
 [[vi:dud]]
 [[zh:dud]]
