--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -139,6 +139,7 @@ The suffix has been used since around the 17th and 18th century. It is most like
 [[pt:qua]]
 [[ru:qua]]
 [[simple:qua]]
-[[vi:qua]]
+[[fi:qua]]
 [[tr:qua]]
+[[vi:qua]]
 [[zh:qua]]
