--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -42,7 +42,7 @@ Literally "beyond the river Dniester".
 * Korean: {{t|ko|트란스니스트리아|sc=Hang}} (teuranseuniseuteuria)
 * Latvian: {{t|lv|Piedņestras Moldāvu Republika|xs=Latvian}}
 * Lithuanian: {{t+|lt|Padniestrė|xs=Lithuanian}}
-* [[Moldavian]]: {{t|mo|Транснистриа|f|tr=Transnistria]]}}
+* [[Moldavian]]: {{t|mo|Транснистриа|f|tr=Transnistria}}
 * Norwegian: {{t-|no|Transnistria}}
 * [[Occitan]]: {{t-|oc|Transnístria|f|xs=Occitan}}
 * [[Piedmontese]]: {{tø|pms|Transnistria|f|xs=Piemontese}}
