--- a/en/o/optionality.855642.wikitext
+++ b/en/o/optionality.855642.wikitext
@@ -7,6 +7,8 @@
 # The potential for making additional choices which are available only after an initial choice.
 # {{finance|business}} The value of additional optional investment opportunities available only after having made an initial investment.
 #:''The short-term payoff for this is modest, but the '''optionality''' value is enormous.''
+# Quality or state in which choice or discretion is allowed.
+#:  ''Some offices do not follow the corporate procedure, due to a culture of '''optionality'''.''
 
 ====Related terms====
 *[[option]]
