--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -12,6 +12,7 @@
 
 ====Translations====
 {{trans-top|Vegetable}}
+* Armenian: {{t|hy|ծաղկակաղամբ|sc=Armn|tr=çaġkakaġamb}}
 * French: {{t+|fr|chou-fleur|m}}
 {{trans-mid}}
 {{trans-bottom}}
