iwiki +[[:lo:squirrel]] <squirrel#6349946>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -133,6 +133,7 @@ The participles with a double 'l' ('''[[squirrelling]]''' and '''[[squirrelled]]
 [[io:squirrel]]
 [[id:squirrel]]
 [[it:squirrel]]
+[[lo:squirrel]]
 [[lt:squirrel]]
 [[hu:squirrel]]
 [[no:squirrel]]
@@ -143,7 +144,7 @@ The participles with a double 'l' ('''[[squirrelling]]''' and '''[[squirrelled]]
 [[fi:squirrel]]
 [[ta:squirrel]]
 [[te:squirrel]]
-[[vi:squirrel]]
 [[tr:squirrel]]
 [[uk:squirrel]]
+[[vi:squirrel]]
 [[zh:squirrel]]
