--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -12,6 +12,7 @@ From {{etyl|la}} ''[[quadrantem]]'' (accusative of ''[[quadrans]]'').
 # {{geometry}} One [[fourth]] of a [[circle]] or [[disc]]; a sector with an [[angle]] of 90&deg;.
 # {{nautical}} A [[measuring]] [[device]] with a graduated arc of 90&deg; used in locating an altitude.
 
+Quadrants can be stupid
 ====Translations====
 {{trans-top|section}}
 * Dutch: [[kwadrant]] {{n}}
