/* Japanese */ Add another reading. <月#6352161>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -51,7 +51,17 @@ As part of a character the pictograph 月 is also used to stand for [[Index:Chin
 #:: '''''Tsuki''' ni ichido, ryokō ni dekake masu.''
 #::: I go for a trip once a '''month'''.
 
-====See also====
+===Noun===
+{{ja-noun|k|hira=つく|rom=tsuku}}
+
+# moon
+
+====Derived terms====
+
+* [[月夜]] (tsukuyo)
+* [[月読]], [[月夜見]] (tsukuyomi)
+
+===See also===
 {{top2}}
 * [[一月]]: [[January]]
 * [[二月]]: [[February]]
