split reflexive object from emphatic co-subject sense; t+ASL <itself#6356103>

--- a/en/i/itself.7369.wikitext
+++ b/en/i/itself.7369.wikitext
@@ -6,20 +6,30 @@
 *:{{rhymes|ɛlf}}
 
 ===Pronoun===
-{{en-pron|desc=the reflexive form of [[it]], the third person singular, neuter, personal pronoun|masculine|himself|feminine|herself|plural|themselves}}
+{{en-pron|desc=the third person singular, neuter, personal pronoun|the reflexive form of|it|masculine|himself|feminine|herself|plural|themselves}}
 
-# A thing, previously mentioned, as the object of a verb or preposition, or as an intensifier.
+# {{reflexive}} [[it]]; {{non-gloss definition|A thing as the object of a verb or preposition that also appears as the subject}}
 #:''The door closed by '''itself'''''
+# {{context|emphatic}} [[it]]; {{non-gloss definition|used to intensify the subject, especially to emphasize that it is the only participant in the predicate}}
 #:''The door '''itself''' is quite heavy.''
 
 ====Translations====
-{{trans-top|A thing, previously mentioned, as the object of a verb or preposition, or as an intensifier}}
+{{trans-top|(reflexive) it}}
+{{trans-mid}}
+* Spanish: [[se]]
+{{trans-bottom}}
+{{trans-top|(emphatic) it}}
+* American Sign Language: {{t|ase|A@Chesthigh SmallFrontandback}}
+*French: [[soi-même]]
+{{trans-mid}}
+*Spanish: [[sí mismo]]
+{{trans-bottom}}
+{{ttbc-top}}
 *Arabic: {{Arab|[[نفسه]]}} {{IPAchar|(nafsáhu)}} {{m}}, {{Arab|[[نفسها]]}} {{IPAchar|(nafsúha)}} {{f}}
 *Chinese: [[它本身]] (tā běn shēn)
 *Dutch: [[zichzelf]]
 * Esperanto: {{t|eo|si}}, {{t|eo|mem}}
 *Finnish: [[itsensä]]
-*French: [[soi-même]]
 *German: [[sich selbst]]
 *Hungarian: [[maga]]
 {{trans-mid}}
@@ -28,7 +38,6 @@
 *Korean: [[그것 자체]] (geugeot jache)
 *Portuguese: [[si mesmo]]
 *Russian: [[себя]] (sebjá)
-*Spanish: [[sí mismo]]
 *Swedish: [[sig]], [[sig själv]] ''reflexive'', [[i sig]] ''as in, "the door itself"''
 {{trans-bottom}}
 
