--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -1,6 +1,12 @@
 ==English==
 {{wikipedia}}
 
+=== Alternate forms ===
+* [[American-English]] {{qualifier|esp. adjective}}
+
+=== Etymology ===
+1806 (US).  As an adjective, 1892.
+
 ===Proper noun===
 {{en-proper noun|sg=[[American]] [[English]]}}
 
@@ -33,7 +39,12 @@
 * Turkish: {{t|tr|Amerikan İngilizcesi}}
 {{trans-bottom}}
 
-====Quotations====
+=== Adjective ===
+{{en-adjective}}
+
+# Of or related to, or spoken or written in American English.
+
+=== Quotations ===
 {{seeCites}}
 
 [[Category:Dialects]]
