--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -10,7 +10,7 @@
 '''FM'''
 
 # {{geography}} [[Federated States of Micronesia]], a member state of the [[United Nations]].
-# {{construction}} [[Factory Mutual Research]]
+# {{construction}} [[w:Factory Mutual Research]]
 
 [[de:FM]]
 [[et:FM]]
