/* {{abbreviation}} */ ins <FM#6359285>

--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -10,7 +10,7 @@
 '''FM'''
 
 # {{geography}} [[Federated States of Micronesia]], a member state of the [[United Nations]].
-# {{construction}} [[w:Factory Mutual Research]]
+# {{insurance|construction}} [[w:Factory Mutual|Factory_Mutual]]
 
 [[de:FM]]
 [[et:FM]]
