--- a/en/s/superinflation.855864.wikitext
+++ b/en/s/superinflation.855864.wikitext
@@ -3,12 +3,11 @@
 ===Noun===
 {{en-noun|-}}
 
-#{{economics}} A very high rate of [[inflation]]
-#{{context|cosmology}} A proposed inflation of spacetime in the early [[universe]] driven by the kinetic energy of the [[dilaton]]
+# {{economics}} A very high rate of [[inflation]]
+# {{context|cosmology}} A proposed inflation of spacetime in the early [[universe]] driven by the kinetic energy of the [[dilaton]]
 
 ====Translations====
-{{top}}
-*Italian: [[superinflazione]] {{f}}
-{{mid}}
-
-{{bottom}}
+{{trans-top}}
+* Italian: [[superinflazione]] {{f}}
+{{trans-mid}}
+{{trans-bottom}}
