--- a/en/j/Joselyn.741080.wikitext
+++ b/en/j/Joselyn.741080.wikitext
@@ -1,7 +1,6 @@
+==English==
 
-
-===Joselyn nombre femenino que es del latin ''''[[Jocelyn]]'''' y procedente a ''''[[Joselin]]''''
-Representa la belleza,timides,fuerza en caracter de la actitud,buena confianza y agil en logica!===
+===Proper noun===
 {{en-proper noun}}
 
 # {{given name|female|from=Germanic}}, a modern spelling variant of [[Jocelyn]].
