--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -10,8 +10,8 @@
 ===Proper noun===
 {{en-proper noun|sg=[[American]] [[English]]}}
 
-# The form of the [[English]] language that is chiefly used in the [[United States]], contrasted with [[British English]] and that of other places..
-# The form of the English language that is chiefly used in [[North America]].
+# The form of the [[English]] language that is chiefly used in the [[United States]], contrasted with [[British English]] and that of other places.
+# The form of the English language that is chiefly used in [[North America]], contrasted with [[British English]] and that of other places.
 
 ====Synonyms====
 * {{sense|English of North America}} [[North American English]]
