iwiki +[[:es:mill]] <mill#6375343>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -234,6 +234,7 @@ Latin [[milium]]
 
 [[Category:Wiradhuri nouns]]
 
+[[es:mill]]
 [[fa:mill]]
 [[fr:mill]]
 [[io:mill]]
@@ -248,6 +249,6 @@ Latin [[milium]]
 [[fi:mill]]
 [[ta:mill]]
 [[te:mill]]
-[[vi:mill]]
 [[tr:mill]]
+[[vi:mill]]
 [[zh:mill]]
