format headers, header -Alternate forms +Alternative forms <American English#6375527>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -1,10 +1,10 @@
 ==English==
 {{wikipedia}}
 
-=== Alternate forms ===
+===Alternative forms===
 * [[American-English]] {{qualifier|esp. adjective}}
 
-=== Etymology ===
+===Etymology===
 1806 (US), {{compound|American|English}}.  As an adjective, 1892.
 
 ===Proper noun===
@@ -39,12 +39,12 @@
 * Turkish: {{t|tr|Amerikan İngilizcesi}}
 {{trans-bottom}}
 
-=== Adjective ===
+===Adjective===
 {{en-adjective}}
 
 # Of or related to, or spoken or written in American English.
 
-=== Quotations ===
+===Quotations===
 {{seeCites}}
 
 [[Category:Dialects]]
