--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -439,7 +439,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 # {{UK|weather}} a change; the end of a spell of persistent good or bad weather
 
 ====Usage notes====
-# {{sense|music}} The instruments that are named are the ones that carry on playing, for example a '''fiddle break''' implies that the fiddle is the most prominent instrument playing during the break.
+* {{sense|music}} The instruments that are named are the ones that carry on playing, for example a '''fiddle break''' implies that the fiddle is the most prominent instrument playing during the break.
 
 ====Synonyms====
 * {{sense|instance of breaking something into two pieces}} [[split]]
